lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_eq_icase_slen/buffer_eq_icase_slen3/buffer_eq_icase_slen3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_eq_icase_slen/buffer_eq_icase_slen3/buffer_eq_icase_slen3.c:30:26: error: use of undeclared identifier 's__b'
    buffer_eq_icase_slen(s__b ,str_s ,sz__slen );
                         ^
1 error generated.
